--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "https://gitlab.swisscloud.io/samuel.contesse/jsrsasign-browser.git"
+    "url": "https://github.com/samcontesse/jsrsasign-browser.git"
   },
   "author": "Kenji Urushima",
   "license": "MIT"
